fixed api routes
